--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -7,6 +7,7 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
+      checks: none
     runs-on: ubuntu-latest
     steps:
     - uses: actions/labeler@v5
